--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>El Helicoptero Apache</title>
+    <title>Trabajo practico con condicionales - javascript</title>
     <link rel="stylesheet" href="style2.css">
 </head>
 <h1>Trabajo practico condicionales</h1>
