--- a/index.html
+++ b/index.html
@@ -8,4 +8,5 @@
     <link rel="stylesheet" href="style2.css">
 </head>
 <h1>Trabajo practico condicionales</h1>
+<h2>Aquí están todas las respuestas de las actividades del ultimo trabajo de practica de condicionales. </h2>
 </html> 
